--- a/AgroPower/Views/Product/Index.cshtml
+++ b/AgroPower/Views/Product/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Product List";
 }
 
-<!-- This Product Page Header -->
+<!-- View>>Product>>Indext  -->
 
 <div class="container-fluid m-1 p-2">
 
